# Sulmo

./: .gitignore  Cargo.toml  README.md  TODO  llama-install.sh  llama.conf  sulmo.conf
cache/: README.md
models/: README  README.md
src/: configs.rs  conversation.rs  main.rs  setup.rs  utils.rs
