[package]
name = "Sulmo"
version = "1.1.0"
edition = "2021"

[dependencies]
crossterm   = {version="0.27.*"}
serde       = {version="1.0.*", features=["derive"]}
serde_json  = {version="1.0.*"}
ratatui     = {version="0.22.*", features=["all-widgets"]}
clipboard   = {version="0.5.*"}
unicode-segmentation = {version="1.10.*"}